--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <title>Gadget Store</title>
   </head>
   <body>
-    <i class="fas fa-search"></i>
     <!-- Home section -->
     <header id="home">
       <div>
@@ -28,6 +27,7 @@
           <form>
             <input type="search" placeholder="Search Products" />
           </form>
+          <i></i>
         </div>
       </div>
 
@@ -45,18 +45,242 @@
           <img src="./img/59.png" alt="img-1" />
         </a>
 
-        <a href="">
-          <span>45</span>
-        </a>
+        <a href=""> <i class="fa fa-light fa-bell"></i> <span>45</span> </a>
 
         <a href="">
+          <i class="fa fa-light fa-bag-shopping"></i>
           <span>6</span>
         </a>
       </div>
     </header>
 
+    <!-- Product Section -->
+    <div>
+      <div>
+        <div>
+          <h1>Our Product</h1>
+          <div>
+            <a href="">Top</a>
+            <a href="">Popular</a>
+            <a href="">Most Sold</a>
+          </div>
+        </div>
+        <button>View All</button>
+      </div>
+
+      <div>
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img src="" alt="" />
+          <div>
+            <div>
+              <h1>Turtle Beach</h1>
+              <h2>Headphone</h2>
+              <p>$20.50</p>
+            </div>
+            <div>
+              <button>
+                <i></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer Section -->
-    <footer></footer>
+    <footer class="footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col footer-s">
+            <h3>Support</h3>
+            <div>
+              <i></i>
+              <div class="footer-text">
+                <p>9AM - 8AM</p>
+                <p class="footer-p">16484</p>
+              </div>
+            </div>
+
+            <div>
+              <i></i>
+              <div class="footer-text">
+                <p>Store Locator</p>
+                <p class="footer-p">16484</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col footer-s">
+            <h3>ABOUT US</h3>
+            <a href="">EMI Terms</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Star Point Policy</a>
+            <a href="">Brand</a>
+          </div>
+
+          <div class="col footer-s diff">
+            <a href="">About us</a>
+            <a href="">Terms & Conditions</a>
+            <a href="">Blog</a>
+            <a href="" class="footer-p">Online Service Support</a>
+          </div>
+
+          <div class="col footer-s diff">
+            <a href="">Online Delivery</a>
+            <a href="">Refund And Return Policy</a>
+            <a href="">Contact Us</a>
+            <a href="" class="footer-p">Complain / Advice</a>
+          </div>
+
+          <div class="col footer-s">
+            <h3>Stay Connected</h3>
+            <p>My Store & Engineering Ltd.</p>
+            <p>Head Office: Dhanmondi 4</p>
+            <p>Nurjahan Tower Rana Plaza.</p>
+            <p>Email:</p>
+            <a href="" class="footer-p">omarfaruk47.emon@gmail.com</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-s">
+        <div class="d-inline-block">
+          <p>2023 My Store & Engineering LTD l All rights reserved</p>
+        </div>
+
+        <div class="d-inline-block">
+          <div>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+          </div>
+          <p>Powered By: My Store</p>
+        </div>
+
+        <div class="line mb-5"></div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
