--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>Gadget Store</title>
   </head>
@@ -213,17 +217,21 @@
         <div class="row">
           <div class="col footer-s">
             <h3>Support</h3>
-            <div>
-              <i class="bi bi-telephone-fill"></i>
-              <div class="footer-text">
+            <div class="d-flex">
+              <div class="footer-icon">
+                <i class="bi bi-telephone-fill"></i>
+              </div>
+              <div class="footer-text ms-5">
                 <p>9AM - 8AM</p>
                 <p class="footer-p">16484</p>
               </div>
             </div>
 
-            <div>
-              <i></i>
-              <div class="footer-text">
+            <div class="d-flex">
+              <div class="footer-icon">
+                <i class="bi bi-geo-alt-fill"></i>
+              </div>
+              <div class="footer-text ms-5">
                 <p>Store Locator</p>
                 <p class="footer-p">16484</p>
               </div>
@@ -232,24 +240,24 @@
 
           <div class="col footer-s">
             <h3>ABOUT US</h3>
-            <a href="">EMI Terms</a>
-            <a href="">Privacy Policy</a>
-            <a href="">Star Point Policy</a>
-            <a href="">Brand</a>
+            <a href="#">EMI Terms</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Star Point Policy</a>
+            <a href="#">Brand</a>
           </div>
 
           <div class="col footer-s diff">
-            <a href="">About us</a>
-            <a href="">Terms & Conditions</a>
-            <a href="">Blog</a>
-            <a href="" class="footer-p">Online Service Support</a>
+            <a href="#">About us</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Blog</a>
+            <a href="#" class="footer-p">Online Service Support</a>
           </div>
 
           <div class="col footer-s diff">
-            <a href="">Online Delivery</a>
-            <a href="">Refund And Return Policy</a>
-            <a href="">Contact Us</a>
-            <a href="" class="footer-p">Complain / Advice</a>
+            <a href="#">Online Delivery</a>
+            <a href="#">Refund And Return Policy</a>
+            <a href="#">Contact Us</a>
+            <a href="#" class="footer-p">Complain / Advice</a>
           </div>
 
           <div class="col footer-s">
@@ -258,22 +266,22 @@
             <p>Head Office: Dhanmondi 4</p>
             <p>Nurjahan Tower Rana Plaza.</p>
             <p>Email:</p>
-            <a href="" class="footer-p">omarfaruk47.emon@gmail.com</a>
+            <a href="#" class="footer-p">omarfaruk47.emon@gmail.com</a>
           </div>
         </div>
 
         <div class="footer-s">
           <div class="footer-end d-flex justify-content-between mt-5">
-            <div class="">
+            <div>
               <p>2023 My Store & Engineering LTD l All rights reserved</p>
             </div>
 
-            <div class="">
-              <div>
-                <i></i>
-                <i></i>
-                <i></i>
-                <i></i>
+            <div class="footer-icons">
+              <div class="d-flex justify-content-between">
+                <i class="bi bi-facebook footer-icon"></i>
+                <i class="bi bi-instagram footer-icon"></i>
+                <i class="bi bi-twitter footer-icon"></i>
+                <i class="bi bi-youtube footer-icon"></i>
               </div>
               <p>Powered By: My Store</p>
             </div>
