--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div>
           <form>
             <input type="search" placeholder="Search Products" />
+            <i class="bi bi-search"></i>
           </form>
           <i></i>
         </div>
@@ -49,17 +50,14 @@
           <img src="./img/59.png" alt="img-1" />
         </a>
 
-        <a href=""> <i class="fa fa-light fa-bell"></i> <span>45</span> </a>
+        <a href=""> <i class="bi bi-bell"></i> <span>45</span> </a>
 
-        <a href="">
-          <i class="fa fa-light fa-bag-shopping"></i>
-          <span>6</span>
-        </a>
+        <a href=""> <i class="bi bi-bag"></i> <span>6</span> </a>
       </div>
     </header>
 
     <!-- Product Section -->
-    <div>
+    <div class="product-section" id="shop">
       <div>
         <div>
           <h1>Our Product</h1>
@@ -72,148 +70,150 @@
         <button>View All</button>
       </div>
 
-      <div>
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+      <div class="container-fluid">
+        <div class="d-grid text-center cards">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
+            <img src="./img/kindpng_4182921 2.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>Turtle Beach</h4>
+                <p>Headphone</p>
+                <h5>$20.50</h5>
+              </div>
+              <div class="product-btn">
+                <button><i class="bi bi-plus-circle"></i> ADD TO CART</button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/kindpng_7637468 1.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>THyperX Alloy FPS</h4>
+                <p>Keyboard</p>
+                <h5>$45.50</h5>
+              </div>
+              <div class="product-btn">
+                <button><i class="bi bi-plus-circle"></i> ADD TO CART</button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/kindpng_1913154 1.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>Oculus Quest</h4>
+                <p>VR Glasses</p>
+                <h5>$1200.50</h5>
+              </div>
+              <div class="product-btn">
+                <button>
+                  <i class="bi bi-plus-circle"></i>
+                  ADD TO CART
+                </button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/kindpng_6280709 2.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>Razer Death Adder</h4>
+                <p>Mouse</p>
+                <h5>$25.50</h5>
+              </div>
+              <div class="product-btn">
+                <button><i class="bi bi-plus-circle"></i> ADD TO CART</button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/Group 32.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>Play Station 4</h4>
+                <p>Gaming Console</p>
+                <h5>$300.50</h5>
+              </div>
+              <div class="product-btn">
+                <button>
+                  <i class="bi bi-plus-circle"></i>
+                  ADD TO CART
+                </button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
-            </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/kindpng_95529 1.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>Xbox wireless Controller</h4>
+                <p>Gamepad</p>
+                <h5>$23.50</h5>
+              </div>
+              <div class="product-btn">
+                <button>
+                  <i class="bi bi-plus-circle"></i>
+                  ADD TO CART
+                </button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div>
-          <img src="" alt="" />
-          <div>
-            <div>
-              <h1>Turtle Beach</h1>
-              <h2>Headphone</h2>
-              <p>$20.50</p>
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/Group 44.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>TSteam Deck</h4>
+                <p>Gaming Console</p>
+                <h5>$68.50</h5>
+              </div>
+              <div class="product-btn">
+                <button><i class="bi bi-plus-circle"></i> ADD TO CART</button>
+              </div>
             </div>
-            <div>
-              <button>
-                <i></i>
-                Add to cart
-              </button>
+          </div>
+
+          <div class="product-card d-flex flex-column align-items-center">
+            <img src="./img/pngfind 2.png" alt="" />
+            <div class="product-section-para">
+              <div class="product-para">
+                <h4>Razer Blade 15</h4>
+                <p>Laptop</p>
+                <h5>$800.50</h5>
+              </div>
+              <div class="product-btn">
+                <button><i class="bi bi-plus-circle"></i> ADD TO CART</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- Best Selling Product Section -->
+    <div>
+      <div class="d-flex justify-content-between">
+        <div>
+          <h2>Our Best Selling Product</h2>
+        </div>
+        <div>
+          <button>View All</button>
+        </div>
+      </div>
+      <div></div>
+    </div>
+
     <!-- Footer Section -->
-    <footer class="footer">
-      <div class="container-fluid">
+    <footer class="footer" id="about_us">
+      <div class="container-fluid footer-container">
         <div class="row">
           <div class="col footer-s">
             <h3>Support</h3>
@@ -261,7 +261,7 @@
           </div>
 
           <div class="col footer-s">
-            <h3>Stay Connected</h3>
+            <h3>STAY CONNECTED</h3>
             <p>My Store & Engineering Ltd.</p>
             <p>Head Office: Dhanmondi 4</p>
             <p>Nurjahan Tower Rana Plaza.</p>
