--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
 
     <!-- Product Section -->
     <div class="product-section" id="shop">
-      <div>
-        <div>
+      <div class="d-flex justify-content-between product-topbar">
+        <div class="d-flex product-topbar-url">
           <h1>Our Product</h1>
-          <div>
+          <div class="product-url d-flex">
             <a href="">Top</a>
             <a href="">Popular</a>
             <a href="">Most Sold</a>
           </div>
         </div>
-        <button>View All</button>
+        <div class="view-all d-flex align-content-center">
+          <button>View All</button>
+        </div>
       </div>
 
       <div class="container-fluid">
