--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Product Section -->
     <div class="product-section" id="shop">
       <div class="d-flex justify-content-between product-topbar">
-        <div class="d-flex product-topbar-url">
+        <div class="d-flex align-items-center product-topbar-url">
           <h1>Our Product</h1>
           <div class="product-url d-flex">
             <a href="">Top</a>
@@ -202,15 +202,68 @@
 
     <!-- Best Selling Product Section -->
     <div>
-      <div class="d-flex justify-content-between">
-        <div>
+      <div class="selling-topbar d-flex justify-content-between">
+        <div class="selling-title">
           <h2>Our Best Selling Product</h2>
         </div>
-        <div>
+        <div class="view-all d-flex align-content-center">
           <button>View All</button>
         </div>
       </div>
-      <div></div>
+
+      <div class="d-flex selling-cards">
+        <div class="d-flex selling-card">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="selling-card-title">
+              <h4>Starting Form</h4>
+              <h5>$20.50</h5>
+              <h3>Turtle Beach Ear Force Recon 50 Gaming Headset</h3>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable. If you are going to use a passage.
+              </p>
+            </div>
+
+            <div class="product-btn">
+              <button>
+                GO TO CATALOGS
+                <i class="bi bi-arrow-right-circle"></i>
+              </button>
+            </div>
+          </div>
+          <div class="selling-img">
+            <img src="./img/kindpng_4182921 2.png" alt="" />
+          </div>
+        </div>
+
+        <div class="d-flex selling-card card-purple">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="selling-card-title">
+              <h4>Starting Form</h4>
+              <h5>$20.50</h5>
+              <h3>Turtle Beach Ear Force Recon 50 Gaming Headset</h3>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable. If you are going to use a passage.
+              </p>
+            </div>
+
+            <div class="product-btn btn-p">
+              <button>
+                GO TO CATALOGS
+                <i class="bi bi-arrow-right-circle"></i>
+              </button>
+            </div>
+          </div>
+          <div class="selling-img">
+            <img src="./img/kindpng_95529 1.png" alt="" />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Footer Section -->
