--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
       <div class="d-flex selling-cards">
         <div class="d-flex selling-card">
-          <div class="d-flex flex-column justify-content-between">
+          <div class="d-flex flex-column justify-content-between card-para">
             <div class="selling-card-title">
               <h4>Starting Form</h4>
               <h5>$20.50</h5>
@@ -259,7 +259,7 @@
               </button>
             </div>
           </div>
-          <div class="selling-img">
+          <div class="selling-img-purple">
             <img src="./img/kindpng_95529 1.png" alt="" />
           </div>
         </div>
