--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/kindpng_7637468 1.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
@@ -104,7 +106,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/kindpng_1913154 1.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
@@ -121,7 +125,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/kindpng_6280709 2.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
@@ -135,7 +141,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/Group 32.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
@@ -152,7 +160,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/kindpng_95529 1.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
@@ -169,7 +179,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/Group 44.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
@@ -183,7 +195,9 @@
             </div>
           </div>
 
-          <div class="product-card d-flex flex-column align-items-center">
+          <div
+            class="product-card d-flex flex-column justify-content-between align-items-center"
+          >
             <img src="./img/pngfind 2.png" alt="" />
             <div class="product-section-para">
               <div class="product-para">
