--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         </div>
 
         <div class="home-search d-flex align-items-center">
-          <i class="search-icon bi bi-search"></i> 
-          <input class="home-input" type="search" placeholder="         Search Products...">
+          <i class="search-icon bi bi-search"></i>
+          <input
+            class="home-input"
+            type="search"
+            placeholder="         Search Products..."
+          />
           <i class="filter-icon bi bi-filter-square"></i>
-        </div>
-
         </div>
       </div>
 
@@ -45,14 +47,21 @@
         </ul>
       </nav>
 
-      <div class="home-topbar d-flex justify-content-between align-items-center">
+      <div
+        class="home-topbar d-flex justify-content-between align-items-center"
+      >
         <a href="" class="navbar-img">
           <img src="./img/59.png" alt="img-1" />
         </a>
 
-        <a href=""> <i class="bi bi-bell"></i> <span>45</span> </a>
-
-        <a href=""> <i class="bi bi-bag"></i> <span>6</span> </a>
+        <a href="" class="noti">
+          <i class="topbar-icon bi bi-bell"></i>
+          <span class="noti_count">45</span>
+        </a>
+        <a href="" class="noti">
+          <i class="topbar-icon bi bi-bag"></i>
+          <span class="noti_count">6</span>
+        </a>
       </div>
     </header>
 
